Render exercise for a given category to Dashboard

--- a/app/app/styles/_globals.scss
+++ b/app/app/styles/_globals.scss
@@ -42,8 +42,8 @@ main {
     }
 }
 
-div, section, article {
-    @include flex-mixin--row(100%);
+main, div, section, article {
+    @include flex-mixin--column(100%);
 }
 
 a {
