Create ItemCard component to render list of exercises for given movement

--- a/app/app/globals.scss
+++ b/app/app/globals.scss
@@ -1,6 +1,8 @@
-@use './styles/globals.scss' as *;
+@use './_styles/globals.scss' as *;
 
-
+.list {
+  gap: 1rem;
+}
 
 // :root {
 //   --max-width: 1100px;
