--- a/app/app/_components/ItemCard/ItemCard.scss
+++ b/app/app/_components/ItemCard/ItemCard.scss
@@ -6,7 +6,15 @@
   flex-direction: row;
   background-color: $test-color;
 
-  &__value {
+  &__property-key {
+    display: none;
+
+    &:first-of-type {
+      display: flex;
+    }
+  }
+
+  &__property-value {
   }
 
 }
