Add global + card styling. Create `getUser` function.
- Import font
- Display user firstname on dashboard page

--- a/app/app/_components/ItemCard/ItemCard.scss
+++ b/app/app/_components/ItemCard/ItemCard.scss
@@ -2,9 +2,9 @@
 @use '../../_styles/globals' as *;
 @use '../../_styles/mixins' as *;
 
-.card {
+.item-card {
   flex-direction: row;
-  background-color: $test-color;
+  background-color: $turquoise;
 
   &__property-key {
     display: none;
