--- a/app/app/_components/Header/Header.scss
+++ b/app/app/_components/Header/Header.scss
@@ -3,14 +3,19 @@
 @use '../../_styles/mixins' as *;
 
 header {
-  @include flex-mixin--row(100%);
-  background-color: black;
-  color: white;
-  font-weight: bold;
-  position: fixed;
-  top: 0;
-  z-index: 3;
-  height: $header-height--tablet;
-  padding: 1rem $page-margin--tablet;
-  box-sizing: border-box;
+  display: none; 
+
+  @include tablet {
+    @include flex-mixin--row(100%);
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    position: fixed;
+    top: 0;
+    z-index: 3;
+    height: $header-height--tablet;
+    padding: 1rem $page-margin--tablet;
+    box-sizing: border-box;
+
+  }
 }
