--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -1,21 +1,22 @@
 @use './variables' as *;
 @use './mixins' as *;
-// @use './fonts' as *;
+@use './fonts' as *;
 
 * {
   @include zero-spacing;
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 main {
-  padding: 1rem $page-margin--tablet;
+  padding: 16px $page-margin--tablet;
   display: flex;
+  font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
 h1 {
   color: blue;
-  font-size: 2rem;
+  font-size: 32px;
   text-transform: capitalize;
   @include heading-margin;
 }
@@ -23,11 +24,14 @@ h1 {
 header, footer {
 }
 
-main {
-  // shift the page content down according to header height
-  position: relative;
-  top: $header-height--tablet;
+.main {
+  @include flex-mixin--column(100%);
+  padding: $page-margin--mobile;
   @include tablet {
+    // shift the page content down according to header height
+    position: relative;
+    top: $header-height--tablet;
+    padding: $page-margin--tablet;
   }
 }
 
@@ -48,10 +52,54 @@ h2, h3, h4, h5 {
   text-transform: capitalize;
 }
 
+.headline1 {
+  font-size: 56pt;
+}
+
+.headline2 {
+  font-size: 53px;
+}
+
+.headline3 {
+  font-size: 40pt; // https://simplecss.eu/pxtoems.html
+}
+
+.headline4 {
+  font-size: 26pt;
+}
+
+.headline5 {
+  font-size: 22pt;
+}
+
+.headline6 {
+  font-size: 20pt;
+}
+
+.subtitle {
+  font-size: 16pt;
+}
+
 article {
   @include flex-mixin--column(100%);
 }
 
 p {
   padding: 0.5em 0;
+  font-size: 14pt;
+}
+
+button {
+  font-size: 14pt;
+}
+
+.card-container {
+  @include flex-mixin--column(100%);
+  gap: $spacing--mobile;
+
+}
+
+.card {
+  @include flex-mixin--column(100%);
+  border-radius: $border-radius;
 }
