--- a/app/app/_styles/_mixins.scss
+++ b/app/app/_styles/_mixins.scss
@@ -27,6 +27,7 @@
     @include flex-mixin($element-width);
     flex-direction: column;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 // this is a function called by `set-element-margin` mixin.
@@ -81,9 +82,9 @@
 }
 
 @mixin heading-margin() {
-    margin: 1.5rem 0 0.5em;
+    margin: 0 0 0.5em;
     @include tablet {
-        margin: 2.25rem 0 0.5em;
+        margin: 0 0 0.5em;
     }
 }
 
@@ -106,4 +107,10 @@
     @include tablet {
         gap: $spacing--tablet;
     }
+}
+
+@mixin card {
+    @include flex-mixin--column(100%);
+    padding: $spacing--mobile;
+    width: 100%;
 }
