Upcoming exercises only renders 1 exercise per movement category
- Create `CreateProgram` class
- Consolidate array properties across multiple exercise records

--- a/app/app/_components/ExerciseCard/ExerciseCard.scss
+++ b/app/app/_components/ExerciseCard/ExerciseCard.scss
@@ -7,4 +7,9 @@
 .exercise-card {
   @include card;
   background-color: $turquoise;
+
+  &__title {
+    // font-size: $card-title-font-size--mobile;
+    @extend p;
+  }
 }
