--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -7,12 +7,14 @@ $spacing--mobile: 1rem;
 $page-margin--tablet: 2rem;
 $spacing--tablet: 1.5rem;
 
+$card-title-font-size--mobile: .875rem;
 
 $form-spacing--mobile: 1.5rem;
 $form-spacing--tablet: 1.5rem;
-$border-radius: .25rem;
+$border-radius: .625rem;
 
 $turquoise: #C7EFEF;
+$dark-blue: #142541;
 
 
 $form-padding--mobile: 0.75rem;
