--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -5,6 +5,7 @@
 * {
   @include zero-spacing;
   font-size: 16px;
+  color: $dark-blue;
 }
 
 main {
@@ -13,9 +14,7 @@ main {
   font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
 h1 {
-  color: blue;
   font-size: 32px;
   text-transform: capitalize;
   @include heading-margin;
@@ -85,8 +84,12 @@ article {
 }
 
 p {
-  padding: 0.5em 0;
-  font-size: 14pt;
+  margin: 0.5em 0;
+  font-size: 14pt; // 19px
+
+  &:last-child {
+    margin: 0.5em 0 0;
+  }
 }
 
 button {
