--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -36,6 +36,7 @@ header, footer {
 
 main, div, section, article {
   @include flex-mixin--column(100%);
+  gap: $spacing--mobile;
 }
 
 a {
@@ -90,10 +91,6 @@ p {
   &:last-child {
     margin: 0.5em 0 0;
   }
-}
-
-button {
-  font-size: 14pt;
 }
 
 .card-container {
