Create `FormField()`, `TrainingFormElements()`

--- a/app/app/_components/Button/Button.scss
+++ b/app/app/_components/Button/Button.scss
@@ -8,6 +8,6 @@ button {
   height: 2.625rem;
   border-radius: $border-radius;
   background-color: $dark-blue;
-  color: white;
+  color: $button-text-color;
   cursor: pointer;
 }
