--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -15,7 +15,7 @@ $border-radius: .625rem;
 
 $turquoise: #C7EFEF;
 $dark-blue: #142541;
-
+$button-text-color: white;
 
 $form-padding--mobile: 0.75rem;
 $form-padding--tablet: 1rem;
