--- a/app/app/_styles/_fonts.scss
+++ b/app/app/_styles/_fonts.scss
@@ -1,7 +1,7 @@
-@font-face {
-    font-family: 'Graphik Medium';
-    src: url('../_assets/fonts/GraphikMedium.otf') format('opentype');
-}
+// @font-face {
+//     font-family: 'Graphik Medium';
+//     src: url('../_assets/fonts/GraphikMedium.otf') format('opentype');
+// }
 
 // @font-face {
 //     font-family: 'Avenir Next';
