Added nav bar; moved icons to `public`
Created `ActionIcon()` component

--- a/app/app/_components/Header/Header.scss
+++ b/app/app/_components/Header/Header.scss
@@ -7,7 +7,8 @@ header {
 
   @include tablet {
     @include flex-mixin--row(100%);
-    background-color: black;
+    border-bottom: $divider;
+    background-color: $off-white;
     color: white;
     font-weight: bold;
     position: fixed;
