--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -1,6 +1,8 @@
 $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
+
+$font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 $page-margin--mobile: 1.5rem;
 $spacing--mobile: 1rem;
 
@@ -16,6 +18,8 @@ $border-radius: .625rem;
 $turquoise: #C7EFEF;
 $dark-blue: #142541;
 $button-text-color: white;
+$off-white: #FDFDFD;
+$divider: 2px solid #727C8D;
 
 $form-padding--mobile: 0.75rem;
 $form-padding--tablet: 1rem;
