--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -3,15 +3,16 @@
 // @use './fonts' as *;
 
 * {
-  @include zero-spacing;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   color: $dark-blue;
+  font-family: $font-family;
 }
 
 main {
   padding: 16px $page-margin--tablet;
   display: flex;
-  font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h1 {
