--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -25,4 +25,5 @@ $form-padding--mobile: 0.75rem;
 $form-padding--tablet: 1rem;
 
 $header-height--tablet: 5rem;
+$nav-bar-height--mobile: 4.75rem;
 $max-content-width: calc(1280px - 8 * $page-margin--tablet);
