Save program to `localStorage` to avoid regenerating it
- Update `<input>` border/outline
- Update `PlaceHolder()`

--- a/app/app/_components/FormField/FormField.scss
+++ b/app/app/_components/FormField/FormField.scss
@@ -11,17 +11,18 @@ input {
 
 
 .input {
-  // &__container {
-  //   @include flex-mixin--row(100%);
-  // }
+  outline: none;
+  border: $input-border;
 
   &--small {
     @include flex-mixin--row(100%);
+    @extend .input;
     width: calc((100% - .5rem) / 2);
   }
 
   &--wide {
     @include flex-mixin(100%);
+    @extend .input;
     width: 100%;
   }
 }
