--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -20,6 +20,7 @@ $dark-blue: #142541;
 $button-text-color: white;
 $off-white: #FDFDFD;
 $divider: 2px solid #727C8D;
+$input-border: 1px solid #DFE6EC;
 
 $form-padding--mobile: 0.75rem;
 $form-padding--tablet: 1rem;
