general page spacing/layout

--- a/app/app/_components/FilterMenu/FilterMenu.scss
+++ b/app/app/_components/FilterMenu/FilterMenu.scss
@@ -3,9 +3,10 @@
 @use '../../_styles/mixins' as *;
 
 .filter-menu {
+  @include flex-mixin--column(100%);
+  justify-content: flex-start;
   position: fixed;
   background-color: $off-white;
-  background-color: pink;
   width: 19.9375rem;
   height: 100vh;
   box-sizing: border-box;
@@ -25,5 +26,7 @@
   background-color: rgba(20, 37, 65, 0.2);
   height: 100vh;
   width: 100vw;
+  top: 0;
+  left: 0;
   z-index: 4;
 }
