--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -3,8 +3,14 @@ $desktop-breakpoint: 1280px;
 
 
 $font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+$header-height--tablet: 5rem;
+$nav-bar-height--mobile: 4.75rem;
+
 $page-margin--mobile: 1.5rem;
 $spacing--mobile: 1rem;
+$bottom-padding--mobile: calc($nav-bar-height--mobile + $page-margin--mobile);
+
 
 $page-margin--tablet: 2rem;
 $spacing--tablet: 1.5rem;
@@ -25,6 +31,4 @@ $input-border: 1px solid #142541;
 $form-padding--mobile: 0.75rem;
 $form-padding--tablet: 1rem;
 
-$header-height--tablet: 5rem;
-$nav-bar-height--mobile: 4.75rem;
 $max-content-width: calc(1280px - 8 * $page-margin--tablet);
