Filter menu content/inputs is based on database.
- Add scrollbar to filter menu
- Create `convertToKebabCase` so input element names are semantic in kabab case
- Able to register checkbox changes but unable to re-render to display it.

--- a/app/app/_components/FilterMenu/FilterMenu.scss
+++ b/app/app/_components/FilterMenu/FilterMenu.scss
@@ -8,13 +8,14 @@
   position: fixed;
   background-color: $off-white;
   width: 19.9375rem;
-  height: 100vh;
+  min-height: 100vh;
+  max-height: 100vh;
   box-sizing: border-box;
   padding: $page-margin--mobile  $page-margin--mobile; 
   right: 0;
   z-index: 5;
   top: 0;
-
+  overflow: auto;
 }
 
 .filter-form {
