--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -21,9 +21,9 @@ header, footer {
 }
 
 .main {
+  @include flex-mixin--column(100%);
   padding: $page-margin--mobile $page-margin--mobile $bottom-padding--mobile;
-  position: relative;
-  display: grid; // this is required for the filter menu to display properly
+  gap: $spacing--mobile;
   @include tablet {
     // shift the page content down according to header height
     position: relative;
