Make dialog functional

--- a/app/app/_components/FilterMenu/FilterMenu.scss
+++ b/app/app/_components/FilterMenu/FilterMenu.scss
@@ -3,18 +3,22 @@
 @use '../../_styles/mixins' as *;
 
 .filter-menu {
-  @include flex-mixin--column(100%);
-  justify-content: flex-start;
+  // @include flex-mixin--column(100%);
+  // justify-content: flex-start;
   position: fixed;
+  // display: flex;
+  // flex-direction: column;
   background-color: $off-white;
   width: 19.9375rem;
   min-height: 100vh;
+  max-height: 100vh;
   box-sizing: border-box;
   padding: $page-margin--mobile  $page-margin--mobile; 
   right: 0;
-  z-index: 5;
+  // z-index: 5;
   top: 0;
   overflow: auto;
+  justify-self: flex-end;
 }
 
 .filter-form {
