--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -32,7 +32,7 @@ header, footer {
   }
 }
 
-div, section, article, ul {
+section, article, ul {
   @include flex-mixin--column(100%);
   gap: $spacing--mobile;
   margin: 0;
@@ -90,6 +90,10 @@ p {
   &:last-child {
     margin-bottom: 0;
   }
+}
+
+.p2 {
+  font-size: .75rem;
 }
 
 .card-container {
