Update streak section of dashboard
- Fix `getStreak()` which would sometimes return empty rows if the day before yesterday has no activity
- Streak now shows current day

--- a/app/app/globals.scss
+++ b/app/app/globals.scss
@@ -1,7 +1,13 @@
 @use './_styles/globals.scss' as *;
+@use './_styles/variables' as *;
 
 .list {
   gap: 1rem;
+}
+
+.login {
+  height: calc(100vh - $nav-bar-height--mobile - $header-height--tablet);
+  justify-content: center;
 }
 
 // :root {
