--- a/app/app/_components/PlotComponent/PlotComponent.scss
+++ b/app/app/_components/PlotComponent/PlotComponent.scss
@@ -1,6 +1,7 @@
 
 
-.plot-container {
-  width: 100%;
-  aspect-ratio: 1;
-}
+// .plot-container,
+// .user-select-none {
+//   width: 100%;
+//   aspect-ratio: 1;
+// }
