--- a/app/app/_components/PlotComponent/PlotComponent.scss
+++ b/app/app/_components/PlotComponent/PlotComponent.scss
@@ -1,7 +1,4 @@
-
-
-// .plot-container,
-// .user-select-none {
-//   width: 100%;
-//   aspect-ratio: 1;
-// }
+.plot-container {
+  height: 230px;
+  z-index: 10;
+}
