Styling: custom checkboxes, layout, filter border

--- a/app/app/_components/CloseIcon/CloseIcon.scss
+++ b/app/app/_components/CloseIcon/CloseIcon.scss
@@ -3,7 +3,7 @@
 @use '../../_styles/mixins' as *;
 
 .close-icon {
-  position: absolute;
+  position: fixed;
   top: $page-margin--mobile;
   right: $page-margin--mobile;
   width: .875rem;
