--- a/app/app/_components/Checkbox/Checkbox.scss
+++ b/app/app/_components/Checkbox/Checkbox.scss
@@ -8,7 +8,7 @@
   gap: $spacing--mobile;
 
   &__span { // custom check form inputs
-    margin: 0 0.5rem;
+    margin-right: 0.5rem;
     width: 1.5rem;
 
     aspect-ratio: 1;
