--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -23,6 +23,7 @@ $border-radius: .625rem;
 
 $turquoise: #C7EFEF;
 $dark-blue: #142541;
+$secondary-text-color: #667183;
 $button-text-color: white;
 $off-white: #FDFDFD;
 $divider: 2px solid #727C8D;
