--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -7,6 +7,7 @@ $font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet
 $header-height--tablet: 5rem;
 $nav-bar-height--mobile: 4.75rem;
 $main-height--tablet: calc(100vh - $header-height--tablet);
+$main-height--mobile: calc(100vh - $nav-bar-height--mobile);
 
 $page-margin--mobile: 1.5rem;
 $spacing--mobile: 1rem;
