Create `CompletionModal()` which routes to dashboard on button click

--- a/app/app/_components/Button/Button.scss
+++ b/app/app/_components/Button/Button.scss
@@ -2,6 +2,9 @@
 @use '../../_styles/globals' as *;
 @use '../../_styles/mixins' as *;
 
+$button-width--tablet: 12.5rem;
+
+
 .button {
   font-size: 14pt; // 19px
   width: 100%;
@@ -10,4 +13,8 @@
   background-color: $dark-blue;
   color: $button-text-color;
   cursor: pointer;
+
+  @include tablet {
+    width: $button-width--tablet;
+  }
 }
