--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -31,6 +31,8 @@ $off-white: #FDFDFD;
 $divider: 2px solid #727C8D;
 $input-border: 1px solid #142541;
 
+$tag-text-color: $off-white;
+
 $form-padding--mobile: 0.75rem;
 $form-padding--tablet: 1rem;
 
