Add secondary font

--- a/app/app/_components/Button/Button.scss
+++ b/app/app/_components/Button/Button.scss
@@ -13,6 +13,7 @@ $button-width--tablet: 12.5rem;
   background-color: $dark-blue;
   color: $button-text-color;
   cursor: pointer;
+  font-family: $font-family--secondary;
 
   @include tablet {
     width: $button-width--tablet;
