--- a/app/app/_styles/_fonts.scss
+++ b/app/app/_styles/_fonts.scss
@@ -3,16 +3,7 @@
     src: url('../_assets/fonts/GraphikMedium.otf') format('opentype');
 }
 
-// @font-face {
-//     font-family: 'Avenir Next';
-//     src: url('../assets/font/AvenirNextLTPro-Bold.otf') format('opentype'),
-//     url('../assets/font/Alternative files/AvenirNextLTProBold.ttf') format('truetype');
-//     font-weight: 700;
-// }
-
-// @font-face {
-//     font-family: 'Avenir Next';
-//     src: url('../assets/font/AvenirNextLTPro-Demi.otf') format('opentype'),
-//     url('../assets/font/Alternative files/AvenirNextLTProDemi.ttf') format('truetype');
-//     font-weight: 600;
-// } 
+@font-face {
+    font-family: 'Circular Air Book';
+    src: url('../_assets/fonts/CircularAir-Book.ttf') format('truetype');
+}
