--- a/app/app/_styles/_variables.scss
+++ b/app/app/_styles/_variables.scss
@@ -2,7 +2,8 @@ $tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
 
-$font-family: 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+$font-family: 'Graphik Medium', 'Circular Air Book', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+$font-family--secondary: 'Circular Air Book', 'Graphik Medium', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 $header-height--tablet: 5rem;
 $nav-bar-height--mobile: 4.75rem;
