--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -110,6 +110,7 @@ h2, h3, h4, h5 {
 
 .subtitle {
   font-size: 1rem;
+  font-family: $font-family--secondary;
 }
 
 article {
@@ -119,6 +120,7 @@ article {
 p {
   margin: 0.5em 0;
   font-size: 14pt; // 19px
+  font-family: $font-family--secondary;
 
   &:last-child {
     margin-bottom: 0;
@@ -132,7 +134,6 @@ p {
 .card-container {
   @include flex-mixin--column(100%);
   gap: $spacing--mobile;
-
 }
 
 .form, form {
