--- a/app/app/_styles/_globals.scss
+++ b/app/app/_styles/_globals.scss
@@ -34,6 +34,7 @@ h1 {
     position: relative;
     top: $header-height--tablet; 
     height: $main-height--tablet;
+    padding: $page-margin--mobile $page-margin--tablet
   }
 }
 
@@ -137,7 +138,12 @@ p {
   @extend section;
 
   @include tablet {
+    flex-direction: row
+  }
+
+  @include desktop {
     width:  $form-width--tablet;
+    flex-direction: column;
   }
 
   &__input-group {
@@ -154,8 +160,11 @@ p {
     @include flex-mixin--row(100%);
     flex-direction: row;
     gap: $spacing--mobile;
-    width: calc(100% - 1.5rem - $spacing--mobile);
     width: 100%;
+    
+    @include tablet {
+      width: $item-width-2;
+    }
   }
 }
 
